# MOSAIC

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  draft_mask3d.py  logging.conf  pyproject.toml  setup_mosaic.sh
.github/workflows/: ci.yml
adapters/: README.md
core/: README.md  __init__.py  contracts.py  environment.yml  logging.conf  main.py  models.py  processing_mode.py  run_parameters.json
core/adapters/: __init__.py  cunufft_wrapper.py  mask_plot_helper.py
core/application/: __init__.py  amplitude.py  common.py  configuration_registry.py  form_factor_registry.py  intervals.py  masking.py  parameters.py  point_processor_registry.py  point_selection.py  postprocessing.py  reciprocal_space.py  structure.py  workflow.py
core/calculators/: __init__.py  amplitude_calculator.py  cell_calculator.py
core/config/: __init__.py  registry.py  run_files.py  runtime.py  schema.py  service.py
core/data_storage/: __init__.py  hdf5_data_storage.py  hdf5_parameter_storage.py  rifft_in_data_saver.py
core/data_structures/: __init__.py  point_data.py
core/decoding/: __init__.py  context.py  contracts.py  decoder_cache.py  decoder_service.py  displacement_service.py  features.py  grid.py  io.py  loader.py  mode.py  payloads.py  processor.py  service.py  site_intensity_service.py  stage.py  state.py  window.py
core/domain/: __init__.py  models.py
core/entrypoints/: main.py
core/factories/: __init__.py  configuration_processor_factory.py  hdf5_factory.py  hdf5_processor_factory.py  parameters_processor_factory.py  point_processor_factory.py
core/form_factors/: __init__.py  default_form_factor_calculator.py  electron_form_factor_calculator.py  electron_form_factor_factory.py  electron_lobato_equation.py  electron_peng_equation.py  form_factor_calculator.py  form_factor_factory.py  form_factor_factory_producer.py  json_parameter_provider.py  neutron_form_factor_calculator.py  neutron_form_factor_factory.py  parameter_provider.py  xray_doyle_turner_equation.py  xray_form_factor_factory.py  (+2 more)
docs/: README.md  cunufft_wrapper_plan.md  gpu_utilization_analysis.md  hpc_parallel_plan.md  input_schema.md  m_decoder_patch_consistency_plan.md  residual_field_mapreduce_plan.md  runtime_guide.md  troubleshooting.md
examples/: README.md  central_points.txt  demo_2D_chemical_ordering_PMN.ipynb  demo_2D_chemical_ordering_PMNPT.ipynb  demo_3D_chemical_ordering_LiFeO2_small.ipynb  input_parameters.json  run_local_gpu.sh  run_parameters.json  run_sge.sh  run_slurm.sh  sample_1d.f1d
plugins/: README.md  custom_mask_strategy.py  plugin_manager.py
scripts/: benchmark_cunufft_overlap.py  benchmark_qspace_masking.py  smoke_example.py
(+389 files in other folders)
