[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
dynamic = ["version"]
description = "Phase-preserving filtering of diffuse scattering amplitude for site-resolved occupancy and displacement analysis."
keywords = [
  "diffuse-scattering",
  "Fourier-filtering",
  "non-uniform-fft",
  "materials-science",
  "site-resolved",
  "chemical-order",
  "M-decoder",
  "residual-field",
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Maksim Eremenko"},
]
dependencies = [
  "dask",
  "distributed",
  "finufft==2.2.0",
  "h5py",
  "matplotlib",
  "numba",
  "numpy",
  "pandas",
  "PyYAML",
  "requests",
  "scipy",
  "sympy",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/MaximEremenko/MOSAIC"
Repository = "https://github.com/MaximEremenko/MOSAIC"

[project.scripts]
mosaic = "core.entrypoints.main:cli"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.dynamic]
version = {attr = "core.__version__"}
